--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,3 +13,4 @@ jobs:
 
         # specify any bash command here prefixed with `run: `
       - run: ./test_all.sh
+      - run: bash <(curl -s https://codecov.io/bash)
